[Fix] Font size too big due to changed padding Changed QA title font size

--- a/src/assets/scss/news/agenda.scss
+++ b/src/assets/scss/news/agenda.scss
@@ -223,10 +223,10 @@ $max-width-small-3: 360px;
 @mixin qaTitleFontsize() {
   font-size: 18pt;
   @media only screen and (max-width: $max-width-medium-0) {
-    font-size: 17pt;
+    font-size: 16pt;
   }
   @media only screen and (max-width: $max-width-medium-1) {
-    font-size: 15pt;
+    font-size: 14pt;
   }
   @media only screen and (max-width: $max-width-small-0) {
     font-size: 11pt;
